syntax = "proto3";

option csharp_namespace = "gRPC.Server";

package greet;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply);
  rpc GetDate (Empty) returns (Date);
  rpc GetStudents(Empty) returns (StudentList);
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
}

message Empty {}

message Date{
	string message = 1;
}

message StudentList{
	repeated Student Students = 1;
}

message Student{
	string name = 1;
	int32 age = 2;
}
